--- a/ProAcc/Views/Login/ResetLink.cshtml
+++ b/ProAcc/Views/Login/ResetLink.cshtml
@@ -56,7 +56,7 @@
                 <div class="form-group">
                     <label class="control-label col-md-12 required">User Name:</label>
                     <div class="col-md-12">
-                        <input type="text" class="form-control" id="txtUserName" maxlength="8" style="border: 2px solid #ccc !important" />
+                        <input type="text" class="form-control" id="txtUserName" style="border: 2px solid #ccc !important" />
                     </div>
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblUserName">&nbsp;</span>
