--- a/ProAcc/Views/Home/UpdatePassword.cshtml
+++ b/ProAcc/Views/Home/UpdatePassword.cshtml
@@ -19,7 +19,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">Old Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtOldPassword"  style="border: 2px solid #ccc !important"/>
+                                    <input type="password" class="form-control" id="txtOldPassword"  style="border: 2px solid #ccc !important"/>
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblOldPassword">&nbsp;</span>
@@ -29,7 +29,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">New Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtNewPassword" maxlength="8" style="border: 2px solid #ccc !important"/>
+                                    <input type="password" class="form-control" id="txtNewPassword" maxlength="8" style="border: 2px solid #ccc !important"/>
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblNewPassword">&nbsp;</span>
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">Confirm Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtCnfPassword" maxlength="8" style="border: 2px solid #ccc !important" />
+                                    <input type="password" class="form-control" id="txtCnfPassword" maxlength="8" style="border: 2px solid #ccc !important" />
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCnfPassword">&nbsp;</span>
